@@ -81,7 +81,7 @@ namespace OpenBabel
       double rab, epsilon, alpha_a, alpha_b, Na, Nb, Aa, Ab, Ga, Gb;
       double R_AB, R_AB7/*, erep, erep7, eattr*/;
       int aDA, bDA; // hydrogen donor/acceptor (A=1, D=2, neither=0)
-
+ 
       void Compute(bool gradients = true);
   };
 
@@ -226,6 +226,11 @@ namespace OpenBabel
       OBForceFieldMMFF94(const char* ID, bool IsDefault=true) : OBForceField(ID, IsDefault)
       {
         _init = false;
+        _rvdw = 7.0;
+        _rele = 15.0;
+        _pairfreq = 15;
+        _cutoff = false;
+        _linesearch = LineSearchType::Simple;
       }
       
       //! Destructor
